# prest

./: .env.example  .gitattributes  .gitignore  .replit  Cargo.toml  LICENSE  README.md  UNDER_THE_HOOD.md  WHATS_NEXT.md  assets.rs  build.rs  build_pwa.rs  config.rs  dev.sh  lib.rs  package.json  prest.rs  pw.rs  pwrs.rs  release.sh  replit.nix  result.rs  run.rs  sw.rs  vals.rs
.cursor/rules/: general.mdc
_temp_deployment/: Dockerfile
assets/: default-view-transition.css
auth/: oauth.rs
cotton/: Cargo.toml  README.md
cotton/src/: lib.rs  main.rs  npm.rs  package.rs  plan.rs  progress.rs  resolve.rs  util.rs
db/: editor.rs  gluesql_traits.rs  key.rs  mod.rs  storage.rs  table.rs
db/macro/: Cargo.toml  analyze.rs  expand.rs  from_glue_value.rs  into_glue_expr.rs  lib.rs
docs/: RUST.md  TS_VS_RUST_FRONTEND.md  WHATS_NEXT.md  inside.md  intro.md  roadmap.md
embed/: mod.rs  readme.md
embed/macro/: Cargo.toml  lib.rs
embed/utils/: Cargo.toml  lib.rs
examples/: Cargo.toml  _Cargo.toml
examples/app-todo/: Cargo.toml  README.md
examples/basic/: Cargo.toml  build.rs  host.rs  lib.rs
examples/bench/: Cargo.toml  README.md
examples/blog/: Cargo.toml  README.md  build.rs  motivations.md  package.json  pages.rs  roadmap.md  script.ts  serve.rs  shared.rs  styles.css  under-the-hood.md
examples/blog/assets/: styles.css
examples/blog/posts/: inside.md  motivation.md  motivations.md  roadmap.md
examples/blog/src/: content.rs  lib.rs  main.rs  prism.ts
examples/blog/src/ui/: prism.js
examples/blog/src/ui/prism/: prism-bash.js  prism-core.js  prism-rust.js  prism-toml.js
examples/blog/ui/: main.scss  mod.rs
examples/blog/ui/styles/: view_transition.scss
examples/blog/ui/templates/: home.rs  motivations.rs
examples/client/: Cargo.toml  README.md  serve.rs
examples/full/: .env.example  Cargo.toml  lib.rs  main.ts
examples/hello/: Cargo.toml  serve.rs
examples/hello-host/: Cargo.toml  README.md  serve.rs
examples/hello-html/: Cargo.toml  README.md  serve.rs
examples/hello-pwa/: Cargo.toml  README.md  build.rs  serve.rs  shared.rs
examples/hello-pwa/src/: lib.rs  main.rs
examples/hello-world/: Cargo.toml  README.md  serve.rs
examples/hello-world-pwa/: Cargo.toml  serve.rs
examples/into-wasi/: Cargo.toml  README.md  serve.rs
examples/into-wasi/src/: main.rs
examples/solana/: Cargo.toml  README.md
examples/solana/src/: lib.rs  main.rs
examples/with-candle-mistral/: Cargo.toml  README.md  llm.rs  serve.rs
examples/with-diesel-postgres/: Cargo.toml  README.md  build.rs  diesel.toml  models.rs  prepare.md  schema.rs  serve.rs
examples/with-diesel-postgres/migrations/2023-10-25-125915_create_todos/: down.sql
examples/with-gluesql/: Cargo.toml  README.md  host.rs  serve.rs  shared.rs  storage.rs
examples/with-gluesql-sled/: Cargo.toml  README.md  serve.rs
examples/with-gluesql/pub/: .webmanifest
examples/with-grass-scss/: Cargo.toml  README.md  build.rs  serve.rs  styles.scss
examples/with-htmx/: Cargo.toml  build.rs  host.rs  shared.rs  sw.ts
examples/with-htmx/pub/: .webmanifest
examples/with-htmx/ui/: main.scss  mod.rs
examples/with-htmx/ui/templates/: home.rs  internals.rs  motivations.rs
examples/with-mistral-inference/: Cargo.toml  generator.rs  serve.rs
examples/with-mongo-driver/: Cargo.toml  README.md  serve.rs
examples/with-mongo-driver/src/: main.rs
examples/with-oauth-google/: Cargo.toml  README.md  prepare.md  serve.rs
examples/with-oauth-google/oauth/: mod.rs
examples/with-openid-google/: Cargo.toml  README.md  google.rs  serve.rs
examples/with-pwa-assets/: Cargo.toml  serve.rs
examples/with-redis-driver/: Cargo.toml  README.md  prepare.md  serve.rs
examples/with-redis-driver/src/: main.rs
examples/with-reqwest-scraper/: Cargo.toml  README.md  serve.rs
examples/with-reqwest-scraper/src/: main.rs
examples/with-scraping/: Cargo.toml  build.rs  host.rs  serve.rs  shared.rs
examples/with-seaorm-postgres/: Cargo.toml  README.md  migrator.rs  serve.rs
host/: Cargo.toml  Dockerfile  admin.rs  analytics.rs  assets.rs  auth.rs  config.rs  docker.rs  embed.rs  https.rs  lib.rs  logs.rs  main.rs  mod.rs  monitoring.rs  proxy.rs  release-builder.Dockerfile  remote.rs  runtime.rs  schedule.rs  server.rs  shared_sled_storage.rs  shutdown.rs  sse.rs  ssh.rs  state.rs  storage.rs  system_info.rs  traces.rs  webview.rs
host/admin/: analytics.rs  db.rs  db_editor.rs  deploy.rs  logs.rs  mod.rs  monitoring.rs  remote.rs  routes_stats.rs  schedule.rs  schedule_stats.rs  system_stats.rs
host/auth/: authn.rs  google_openid.rs  mod.rs  oauth.rs  permissions.rs  session.rs  user.rs
host/db/: alter_table.rs  index.rs  index_mut.rs  index_sync.rs  mod.rs  snapshot.rs  store.rs  store_mut.rs  transaction.rs
host/sled/: alter_table.rs  error.rs  index.rs  index_mut.rs  index_sync.rs  lock.rs  mod.rs  store.rs  store_mut.rs  transaction.rs
host/sled_storage/: gc.rs  mod.rs
html/: README.md  common.rs  escape.rs  head.rs  htmx.rs  htmx_patch.js  mod.rs  template.rs  utils.rs
init/: Cargo.toml  lib.rs
middleware/: embed.rs  htmx.rs  mod.rs
pwrs-app/: Cargo.toml  build.rs  homepage.rs  lib.rs  main.rs  server.rs  styles.scss  sw.ts  templates.rs
pwrs-app/pub/: include_sw.js  styles.css
pwrs-app/ui/: main.scss  main.ts  mod.rs
pwrs-app/ui/styles/: mixins.scss
pwrs-app/ui/templates/: home.rs  mod.rs
pwrs-build/: Cargo.toml  lib.rs  swc.rs  wasm_bindgen.rs
pwrs-host/: Cargo.toml  embed.rs  lib.rs
pwrs-host/auth/: mod.rs
pwrs-lab/: Cargo.toml  assets.rs  build.rs  config.rs  run.rs
pwrs-sw/: Cargo.toml  lib.rs
pwrs-ui/: Cargo.toml  lib.rs
serde_derive_fork/: Cargo.toml
service_worker/: mod.rs  state.rs
sw/: Cargo.toml  lib.d.ts  lib.rs  mod.rs  utils.rs
tools/: Cargo.toml  cargo.rs  lib.rs  swc.rs  wasm_bindgen.rs
ui/: Cargo.toml  admin.scss  admin.tsx  db.tsx  default.css  htmx-sse-ext.js  lib.rs  main.scss  main.ts  preset.css  preset.ts  prest.js  stats.tsx  traces.tsx
utils/: host.rs  maud_support.rs  mod.rs  serve.rs  sw.rs  sw_bindings.rs
(+193 files in other folders)
