[package]
name = "pwrs-host"
version = "0.0.1"
edition = "2021"

[lib]
name = "pwrs_host"
path = "./lib.rs"

[dependencies]
pwrs = { path = "../" }
anyhow = "*"
rust-embed = { version = "*", features = ["mime-guess"] }
hex = "*"
tracing-subscriber = { version = "*", features = ["fmt"] } 
axum-server = "*"
tower-http = { version = "*", features = ["trace", "catch-panic", "cors"] }


