[package]
name = "pwrs-sw"
version = "0.0.1"
edition = "2021"

[lib]
name = "pwrs_sw"
path = "./lib.rs"

[dependencies]
pwrs = { path = "../" }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
console_error_panic_hook = "*"
[dependencies.web-sys]
version = "*"
features = [
    "console",
    "FetchEvent", 
    "Request", 
    "ReadableStream", 
    "ReadableStreamDefaultReader",
    "Headers", 
    "ResponseInit", 
    "Response",
]   