[package]
name = "embed-macro"
version = "8.0.0"
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
embed-utils = { path = "../utils" }
syn = { version = "2", default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.3.1"
shellexpand = "3"

[features]
debug-embed = []
