[package]
name = "prest-embed-macro"
version = "0.1.0"
edition = "2021"
description = "fork of embed macro from rust-embed"
license = "MIT OR Apache-2.0"
authors = ["pyros2097 <pyros2097@gmail.com>", "Egor Dezhic <edezhic@gmail.com>"]

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
prest-embed-utils = { path = "../utils", version = "0.1.0" }
syn = { version = "2", default-features = false, features = ["derive", "parsing", "proc-macro", "printing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2.3.1"
shellexpand = "3"

[features]
lazy-embed = []
