[package]
name = "blog"
version = "0.0.1"
edition = "2021"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../" }
markdown = "1.0.0-alpha.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

[build-dependencies]
prest-build = { path = "../../build/" }
