[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = "0.1"
markdown = "1.0.0-alpha.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[build-dependencies]
prest-build = "0.1"
