[package]
name = "blog"
edition = "2021"

[dependencies]
prest = { version = "0.4", path = "../../" }
wasm-bindgen = "0.2"
markdown = "1.0.0-alpha.16"
toml = "0.8.8"

[build-dependencies]
prest-build = { version = "0.3", path = "../../build", features = ["typescript", "sass"] }

[package.metadata]
domain = "prest.blog"
