[package]
name = "hello-pwa"
version = "0.0.1"
edition = "2021"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "serve"
path = "./serve.rs"

[features]
default = ["prest/host"]
sw = ["prest/sw", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
prest = { path = "../../" }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

[build-dependencies]
prest = { path = "../../", features = ["build-pwa"] }
