[package]
name = "hello-pwa"
version = "0.0.1"
edition = "2021"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../" }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

[build-dependencies]
prest-build = { path = "../../build/" }
