[package]
name = "hello-world-pwa"
version = "0.0.1"
edition = "2021"

[lib]
path = "./serve.rs"

[[bin]]
name = "serve"
path = "./serve.rs"

[features]
default = ["host"]
host = ["prest/host", "prest/build", "tokio/full"]
sw = ["prest/sw", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
prest = { path = "../../" }
maud = "*"
rust-embed = { version = "*", features = ["interpolate-folder-path"] }
tokio = { version = "*", optional = true }
wasm-bindgen = { version = "*", optional = true }
wasm-bindgen-futures = { version = "*", optional = true }

[build-dependencies]
prest = { path = "../../" }
