[package]
name = "into-wasi"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
hyper_wasi = { version = "0.15", features = ["full"] }