[package]
name = "with-candle-mistral"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }
serde = "*"

hf-hub = "0.3.0"
tokenizers = { version = "0.13.4", default-features = false }
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-datasets = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
