[package]
name = "with-diesel-postgres"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../" }
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "*", features = ["derive"] }
