[package]
name = "with-diesel-postgres"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = "0.1"
diesel = { version = "2.1.0", features = ["uuid"] }
diesel-async = { version = "0.3.1", features = ["deadpool", "postgres"] }
dotenvy = "0.15"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
