[package]
name = "with-gluesql-sled"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../" }
serde = "*"
uuid = { version = "*", features = ["v4"] }
gluesql = { git = "https://github.com/gluesql/gluesql", default-features = false, features = ["sled-storage"]}
tokio = "*"