[package]
name = "with-gluesql-sled"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = "0.1"
serde = { version = "1", features=["derive"] }
uuid = { version = "1.6", features = ["v4"] }
gluesql = { version = "0.15", default-features = false, features = ["sled-storage"]}
