[package]
name = "with-gluesql"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
pwrs = { path = "../../", features = ["host"] }
maud = "*"
serde = "*"
futures = "*"
uuid = { version = "*", features = ["v4"] }
tokio = "*"
gluesql = { git = "https://github.com/gluesql/gluesql", default-features = false, features = ["sled-storage"]}
