[package]
name = "with-grass-scss"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }
tokio = { version = "*", features = ["full"] }

[build-dependencies]
prest = { path = "../../" }
grass = { version = "0.13.1", default-features = false }

