[package]
name = "with-htmx"
version = "0.0.1"
edition = "2021"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "host"
path = "./host.rs"

[features]
sw = []

[dependencies]
prest = { path = "../../" }
maud = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prest = { path = "../../", features = ["host"] }
tokio = { version = "*", features = ["full"] }
rust-embed = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
prest = { path = "../../", features = ["sw"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

[build-dependencies]
prest = { path = "../../", features = ["build"] }
