[package]
name = "with-mongo-driver"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }
tokio = { version = "*", features = ["full"] }
mongodb = { version = "2.7.0", features = ["bson-uuid-1"] }
serde = { version = "*", features = ["derive"] }
futures = "*"