[package]
name = "with-oauth-google"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }

# --- fork to switch axum to the latest(unstable) main like in prest
axum-login = { git = "https://github.com/edezhic/axum-login" }

rand = { version = "0.8.5", features = ["min_const_gen"] }
openidconnect = "*"
dotenv = "*"
serde = "*"
