[package]
name = "with-redis-driver"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }
tokio = { version = "*", features = ["full"] }
redis = "0.23.3"
uuid = { version = "*", features = ["v4"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"