[package]
name = "with-reqwest-scraper"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
prest = { path = "../../", features = ["host"] }
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", default-features=false, features = ["rustls-tls"] }
scraper = "*"
futures = "*"
