[package]
name = "with-scraping"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "serve"
path = "./serve.rs"

[dependencies]
pwrs = { path = "../../", features = ["host"] }
maud = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", default-features=false, features = ["rustls-tls"] }
scraper = "*"
futures = "*"
